--- a/home.html
+++ b/home.html
@@ -8,7 +8,13 @@
         * {
             margin: 0px;
             padding: 0px;
+        }
 
+        body {
+            width: 100vw;
+            height: 100vh;
+            background: black url('imagens/home2.jpg') no-repeat top center;
+            background-size: cover;
         }
     </style>
 </head>
